--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TPB个人网站</title>
+        <title>TPB Personal Website</title>
         <meta charset="utf-8">
         <style>
             @import url("css/index.css");
@@ -14,20 +14,21 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">主页</a>
-                <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">关于</a>
-                <a class="pay" href="pay.html">打赏</a>
+                <a class="home" href="index.html">Home</a>
+                <a class="writings" href="writings.html">Works</a>
+                <a class="about" href="about.html">About</a>
+                <a class="pay" href="pay.html">Reward</a>
             </div>
         </div>
 
         <div class="home">
             <div class="content">
-                <h2 style="font-size: xx-large;">欢迎来到TPB个人网站！</h2>
-                <p style="font-size: large;">通过此网站，大家能够看到我的每一部作品</p>
-                <p style="font-size: large;">目前本人无法往此网站上传小说，在小说详情我会提供小说链接</p>
-                <p style="font-size: large;"><button onclick="writings()">查看作品</button></p>
-                <a class="update" href="update.html">查看更新内容</a>
+                <h2 style="font-size: xx-large;">Welcome to TPB Personal Website!</h2>
+                <p style="font-size: large;">You can see every my works through this website.</p>
+                <p style="font-size: large;">I will offer the works link in the details.</p>
+                <p style="font-size: large;"><button onclick="writings()">See the Works</button></p>
+                <a class="update" href="update.html">What updated?</a> <br />
+                <a class="language" href="language.html">Change language</a>
             </div>
         </div>
         
