--- a/writings/命运之夜两个世界.html
+++ b/writings/命运之夜两个世界.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>作品详情——Fate；Two World</title>
+        <title>Details——Fate；Two World</title>
         <meta charset="utf-8">
         <style>
             @import url("../css/writings/命运之夜两个世界.css");
@@ -26,11 +26,14 @@
                 <h1>Fate; Two World</h1>
             </div>
             <div class="content">
-                <p>《Fate; Two World》是本作者基于Fate系列作品改编而来的轻小说。</p>
-                <p>第五次圣杯战争爆发二十年以后的2024年，一个大圣杯却突然出现了。而这个大圣杯也牵扯到另外一个世界。人们把这种规模的圣杯战争，称之为圣杯讨伐战。而现在，两个世界的他们将会做出不同的选择。这两个世界的命运将会走向何处？</p>
+                <p>《Fate; Two World》is the novel based on Fate series.</p>
+                <p>In year 2024, what past 20 years from the 5th Holy Grail War, the big Holy Grail is appeared. And this holy grail will effect the another world. Magicians called this special Holy Grail War as the Holy Grail Pursing War. Now magicians, who is in the different two world, will have different decision. What will happen to these worlds?</p>
             </div>
             <div class="website">
-                <p>此小说正在努力编写，请读者们稍安勿躁。发布时间即将在官网中写明。</p>
+                <p>Please attention, there is only Chinese(Simplified) version. The English version is writing.</p>
+                <p><a href="https://www.bilibili.com/read/cv24652183?spm_id_from=333.999.0.0">Bilibili</a></p>
+                <p><a>SF Novel Website is checking...</a></p>
+                <p><a>Please download Ciweimao Novel APP if you want to read it in Ciweimao Novel App.</a></p>
             </div>
         </div>
     </body>
