--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>关于</title>
+        <title>About</title>
         <meta charset="utf-8">
         <style>
             @import url("css/about.css");
@@ -14,20 +14,20 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">主页</a>
-                <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">关于</a>
-                <a class="pay" href="pay.html">打赏</a>
+                <a class="home" href="index.html">Home</a>
+                <a class="writings" href="writings.html">Works</a>
+                <a class="about" href="about.html">About</a>
+                <a class="pay" href="pay.html">Reward</a>
             </div>
         </div>
         <div class="details">
             <div class="text">
-                <h1>关于我们</h1>
-                <p>这是本作者基于html所编写的网站，感谢在网站编写方面教育我的所有人。</p>
-                <p>目前本作者正在努力改善此网站，网站中将不断加入新的功能。</p>
-                <p>以后本作者将在此网站发布新的小说预告等内容，请大家多多期待！</p>
-                <p>感谢Github官方、HarmonyOS开发者官网等提供网站显示等帮助！</p>
-                <p>若您有意和我合作，您可加我QQ：3022930232</p>
+                <h1>About Us</h1>
+                <p>This is the website based on HTML, and I'm very thanks to every who taught me about HTML.</p>
+                <p>We are improving this website, and there will be more functions in it.</p>
+                <p>I will issue the new novel advance notice and other things.</p>
+                <p>Thanks to Github, HarmonyOS Developer Website(HUAWEI)</p>
+                <p>If you want to join us, please contact me QQ number: 3022930232</p>
             </div>
             
         </div>
