--- a/kind.html
+++ b/kind.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p onclick="parent.frames['writingdetails'].location.href = 'writingdetails.html'">同人小说</p>
-        <p onclick="parent.frames['writingdetails'].location.href = 'videodetails.html'">配音视频</p>
+        <p onclick="parent.frames['writingdetails'].location.href = 'writingdetails.html'">Fan Fiction</p>
+        <p onclick="parent.frames['writingdetails'].location.href = 'videodetails.html'">Dubbing Video</p>
     </body>
     <script>
 
