--- a/pay.html
+++ b/pay.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Reward</title>
         <meta charset="utf-8">
         <style>
             @import url("css/pay.css");
@@ -13,29 +14,29 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">主页</a>
-                <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">关于</a>
-                <a class="pay" href="pay.html">打赏</a>
+                <a class="home" href="index.html">Home</a>
+                <a class="writings" href="writings.html">Works</a>
+                <a class="about" href="about.html">About</a>
+                <a class="pay" href="pay.html">Reward</a>
             </div>
         </div>
         <div class="home">
             <div class="qrcode">
                 <div class="receive">
                     <img src="img/收款码.jpg" name="receive" class="receive" />
-                    <p style="font-size: small;">通过扫码赞助</p>
+                    <p style="font-size: small;">(Alipay)Scan the QR Code to support.</p>
                 </div>
                 <div class="jiangli">
                     <img src="img/领红包.jpg" name="jiangli" class="jiangli" />
-                    <p style="font-size: small;">通过扫码领取红包（我也不知道这玩意到底是啥）</p>
+                    <p style="font-size: small;">Get Hongbao through this QR Code(I don't know what is this)</p>
                 </div>
             </div>
             <div class="details">
                 <div class="wenzi">
-                    <h2>感谢您的赞助!</h2>
-                    <p>一直为大家带来更精彩的作品，是本人一直不变的信念。但是与此同时，这也离不开大家的支持。</p>
-                    <p>虽然寒酸，但是也希望大家能通过打赏多多支持本人。谢谢大家的赞助！</p>
-                    <p>领红包的二维码，我也不知道干什么的。不过我觉得这应该可以让大家领取一些小钱，因此也放了上去。</p>
+                    <h2>Thanks for your support!</h2>
+                    <p>My belief is to make more excellent works to everyone, but I need your support too.</p>
+                    <p>Hope you can support me, please. Thanks.</p>
+                    <p>I don't know the QR Code that get Hongbao, but I think Alipay can give you some money, I think.</p>
                 </div>
                 
             </div>
