--- a/writingdetails.html
+++ b/writingdetails.html
@@ -11,7 +11,7 @@
         <div class="hang">
             <div class="bufen" onclick="dongfangshuangshilu()">
                 <div class="img"><img src="img/东方双世录.jpg" class="dongfangshuangshilu" style="height: 95%;"/></div>
-                <div class="text">东方双世录</div>
+                <div class="text">Touhou Project; Sanseiroku(The story between Two World)</div>
             </div>
 
             <div class="bufen" onclick="fatetwoworld()">
