--- a/writings/东方双世录.html
+++ b/writings/东方双世录.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>作品详情——东方双世录</title>
+        <title>Details - Touhou Project; Sanseiroku(The story between Two World)</title>
         <meta charset="utf-8">
         <style>
             @import url("../css/writings/东方双世录.css");
@@ -23,17 +23,17 @@
         </div>
         <div class="details">
             <div class="title">
-                <h1>东方双世录</h1>
+                <h1>Touhou Project; Sanseiroku(The story between Two World)</h1>
             </div>
             <div class="content">
-                <p>《东方双世录》是本作者基于东方project改编而来的轻小说。</p>
-                <p>世界毁灭之际，三个少年少女在「生命的最后一刻」来到了陌生的世界。在这里，他们遇见了新的同伴，也遇见了他们共同的强敌。为了守护这陌生的世界，也为了拯救自己的世界，三个少年少女开始和同伴们开始互相合作……</p>
+                <p>《Touhou Project; Sanseiroku(The story between Two World)》is the novel based on Touhou Project.</p>
+                <p>When the world is destoried, three boys and girls came to strange world at the "last time of life". At that place, they met the new friends, met their enemy. They cooperated with friends, to protect this world, to save their world......</p>
             </div>
             <div class="website">
-                <p>此小说已经在SF轻小说（菠萝包轻小说）、刺猬猫小说、哔哩哔哩专栏发布。</p>
-                <p><a href="https://book.sfacg.com/Novel/606519/">SF轻小说请点击这里</a></p>
-                <p>目前刺猬猫小说无法在电脑查看，请您下载刺猬猫小说APP搜索查看，谢谢理解。</p>
-                <p><a href="https://www.bilibili.com/read/cv22536882">哔哩哔哩专栏请点击这里</a></p>
+                <p>Please attention, there is only Chinese(Simplified) version. The English version is writing.</p>
+                <p><a href="https://book.sfacg.com/Novel/606519/">SF Novel Website</a></p>
+                <p>Please download Ciweimao Novel App to read the novel if you want to read in Ciweimao Novel.</p>
+                <p><a href="https://www.bilibili.com/read/cv22536882">Bilibili</a></p>
             </div>
         </div>
     </body>
