--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About</title>
+        <title>關於</title>
         <meta charset="utf-8">
         <style>
             @import url("css/about.css");
@@ -14,20 +14,20 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">Home</a>
-                <a class="writings" href="writings.html">Works</a>
-                <a class="about" href="about.html">About</a>
-                <a class="pay" href="pay.html">Reward</a>
+                <a class="home" href="index.html">主頁</a>
+                <a class="writings" href="writings.html">作品</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
             </div>
         </div>
         <div class="details">
             <div class="text">
-                <h1>About Us</h1>
-                <p>This is the website based on HTML, and I'm very thanks to every who taught me about HTML.</p>
-                <p>We are improving this website, and there will be more functions in it.</p>
-                <p>I will issue the new novel advance notice and other things.</p>
-                <p>Thanks to Github, HarmonyOS Developer Website(HUAWEI)</p>
-                <p>If you want to join us, please contact me QQ number: 3022930232</p>
+                <h1>關於我們</h1>
+                <p>這是本作者基於html所編寫的網站，感謝在網站編寫方面教育我的所有人。</p>
+                <p>目前本作者正在努力改善此網站，網站中將不斷加入新的功能</p>
+                <p>以後本作者將在此網站發佈新的小説預告等内容，請大家多多期待。</p>
+                <p>感謝Github官方，HarmonyOS開發者官網等提供網站顯示等幫助。</p>
+                <p>若您有意和我合作，您可加我QQ：3022930232</p>
             </div>
             
         </div>
