--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TPB Personal Website</title>
+        <title>TPB個人網站</title>
         <meta charset="utf-8">
         <style>
             @import url("css/index.css");
@@ -14,21 +14,21 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">Home</a>
-                <a class="writings" href="writings.html">Works</a>
-                <a class="about" href="about.html">About</a>
-                <a class="pay" href="pay.html">Reward</a>
+                <a class="home" href="index.html">主頁</a>
+                <a class="writings" href="writings.html">作品</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
             </div>
         </div>
 
         <div class="home">
             <div class="content">
-                <h2 style="font-size: xx-large;">Welcome to TPB Personal Website!</h2>
-                <p style="font-size: large;">You can see every my works through this website.</p>
-                <p style="font-size: large;">I will offer the works link in the details.</p>
-                <p style="font-size: large;"><button onclick="writings()">See the Works</button></p>
-                <a class="update" href="update.html">What updated?</a> <br />
-                <a class="language" href="language.html">Change language</a>
+                <h2 style="font-size: xx-large;">歡迎來到TPB個人網站！</h2>
+                <p style="font-size: large;">通過此網站，大家能看到我的每一個作品。</p>
+                <p style="font-size: large;">目前本人無法往此網站上傳小説，在小説詳情我會提供小説鏈接</p>
+                <p style="font-size: large;"><button onclick="writings()">查看作品</button></p>
+                <a class="update" href="update.html">查看更新内容</a> <br />
+                <a class="language" href="language.html">更改語言</a>
             </div>
         </div>
         
