--- a/pay.html
+++ b/pay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Reward</title>
+        <title>打賞</title>
         <meta charset="utf-8">
         <style>
             @import url("css/pay.css");
@@ -14,29 +14,29 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">Home</a>
-                <a class="writings" href="writings.html">Works</a>
-                <a class="about" href="about.html">About</a>
-                <a class="pay" href="pay.html">Reward</a>
+                <a class="home" href="index.html">主頁</a>
+                <a class="writings" href="writings.html">作品</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
             </div>
         </div>
         <div class="home">
             <div class="qrcode">
                 <div class="receive">
                     <img src="img/收款码.jpg" name="receive" class="receive" />
-                    <p style="font-size: small;">(Alipay)Scan the QR Code to support.</p>
+                    <p style="font-size: small;">通過掃碼贊助</p>
                 </div>
                 <div class="jiangli">
                     <img src="img/领红包.jpg" name="jiangli" class="jiangli" />
-                    <p style="font-size: small;">Get Hongbao through this QR Code(I don't know what is this)</p>
+                    <p style="font-size: small;">通過掃碼領取紅包（我也不知道這玩意到底是什麽啥）</p>
                 </div>
             </div>
             <div class="details">
                 <div class="wenzi">
-                    <h2>Thanks for your support!</h2>
-                    <p>My belief is to make more excellent works to everyone, but I need your support too.</p>
-                    <p>Hope you can support me, please. Thanks.</p>
-                    <p>I don't know the QR Code that get Hongbao, but I think Alipay can give you some money, I think.</p>
+                    <h2>感謝您的贊助！</h2>
+                    <p>一直為大家帶來更精彩的作品，是本人一直不變的信念。但是與此同時，這也離不開大家的支持。</p>
+                    <p>雖然寒酸，但是也希望大家能通過打賞多多支持本人。謝謝大家的贊助。</p>
+                    <p>領紅包的二維碼，我也不知道幹什麽的。不過我覺得這應該可以讓大家領取一些小錢，因此也放了上去。</p>
                 </div>
                 
             </div>
