--- a/update.html
+++ b/update.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h2>Updated:</h2>
-        <p>Supported Multilanguage, Added SC/TC Chinese and English.</p>
+        <h2>更新内容如下：</h2>
+        <p>已經支持多語言，支持簡體/繁體中文、英文。</p>
     </body>
 </html>
