--- a/writings/命运之夜两个世界.html
+++ b/writings/命运之夜两个世界.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Details——Fate；Two World</title>
+        <title>作品详情——Fate；Two World</title>
         <meta charset="utf-8">
         <style>
             @import url("../css/writings/命运之夜两个世界.css");
@@ -26,14 +26,14 @@
                 <h1>Fate; Two World</h1>
             </div>
             <div class="content">
-                <p>《Fate; Two World》is the novel based on Fate series.</p>
-                <p>In year 2024, what past 20 years from the 5th Holy Grail War, the big Holy Grail is appeared. And this holy grail will effect the another world. Magicians called this special Holy Grail War as the Holy Grail Pursing War. Now magicians, who is in the different two world, will have different decision. What will happen to these worlds?</p>
+                <p>《Fate; Two World》是本作者基於Fate系列改編而來的輕小説。</p>
+                <p>第五次聖杯戰爭爆發二十年以後的2024年，一個大聖杯卻突然出現了。而這個大聖杯也牽扯到了另外一個世界。人們把這種規模的聖杯戰爭，稱之爲聖杯討伐戰。而現在，兩個世界的他們將會做出不同的選擇。這兩個世界的命運將會走向何處？</p>
             </div>
             <div class="website">
-                <p>Please attention, there is only Chinese(Simplified) version. The English version is writing.</p>
-                <p><a href="https://www.bilibili.com/read/cv24652183?spm_id_from=333.999.0.0">Bilibili</a></p>
-                <p><a>SF Novel Website is checking...</a></p>
-                <p><a>Please download Ciweimao Novel APP if you want to read it in Ciweimao Novel App.</a></p>
+                <p>每周日下午12:00更新</p>
+                <p><a href="https://www.bilibili.com/read/cv24652183?spm_id_from=333.999.0.0">嗶哩嗶哩專欄</a></p>
+                <p><a href="https://book.sfacg.com/Novel/650124/">SF輕小説</a></p>
+                <p><a>刺蝟貓小説請移步到APP客戶端閲讀，網頁端未提供相關鏈接。</a></p>
             </div>
         </div>
     </body>
