--- a/writings.html
+++ b/writings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Works</title>
+        <title>作品</title>
         <meta charset="utf-8">
         <style>
             @import url("css/writings.css");
@@ -16,12 +16,12 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">Home</a>
-                <a class="writings" href="writings.html">Works</a>
-                <a class="about" href="about.html">About</a>
-                <a class="pay" href="pay.html">Reward</a>
-                <a id="more" class="more" onclick="show()">Show More</a>
-                <a id="none" class="none" onclick="hide()">Hide</a>
+                <a class="home" href="index.html">主頁</a>
+                <a class="writings" href="writings.html">作品</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
+                <a id="more" class="more" onclick="show()">更多</a>
+                <a id="none" class="none" onclick="hide()">收回</a>
             </div>
         </div>
 
