--- a/writings/东方双世录.html
+++ b/writings/东方双世录.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Details - Touhou Project; Sanseiroku(The story between Two World)</title>
+        <title>作品详情——东方双世录</title>
         <meta charset="utf-8">
         <style>
             @import url("../css/writings/东方双世录.css");
@@ -23,17 +23,17 @@
         </div>
         <div class="details">
             <div class="title">
-                <h1>Touhou Project; Sanseiroku(The story between Two World)</h1>
+                <h1>東方雙世錄</h1>
             </div>
             <div class="content">
-                <p>《Touhou Project; Sanseiroku(The story between Two World)》is the novel based on Touhou Project.</p>
-                <p>When the world is destoried, three boys and girls came to strange world at the "last time of life". At that place, they met the new friends, met their enemy. They cooperated with friends, to protect this world, to save their world......</p>
+                <p>《東方雙世錄》是本作者基於東方project改編而來的輕小説。</p>
+                <p>世界毀滅之際，三個少年少女在『生命的最後一刻』來到了陌生的世界。在這裏，他們遇見了新的同伴，也遇見了他們共同的强敵。爲了守護這陌生的世界，也爲了拯救自己的世界，三個少年少女開始和同伴們開始互相合作……</p>
             </div>
             <div class="website">
-                <p>Please attention, there is only Chinese(Simplified) version. The English version is writing.</p>
-                <p><a href="https://book.sfacg.com/Novel/606519/">SF Novel Website</a></p>
-                <p>Please download Ciweimao Novel App to read the novel if you want to read in Ciweimao Novel.</p>
-                <p><a href="https://www.bilibili.com/read/cv22536882">Bilibili</a></p>
+                <p>已完結</p>
+                <p><a href="https://book.sfacg.com/Novel/606519/">SF輕小説</a></p>
+                <p>目前刺蝟貓輕小説無法在電腦查看，請您下載刺蝟貓小説APP搜索查看，謝謝理解</p>
+                <p><a href="https://www.bilibili.com/read/cv22536882">嗶哩嗶哩專欄</a></p>
             </div>
         </div>
     </body>
