--- a/language.html
+++ b/language.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p><a href="">简体中文（已选择）</a></p>
-        <p><a href="">繁體中文</a></p>
+        <p><a href="">简体中文</a></p>
+        <p><a href="">繁體中文（已選擇）</a></p>
         <p><a href="">English</a></p>
     </body>
 </html>
