--- a/language.html
+++ b/language.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p><a href="https://sunboytpb.github.io/">简体中文</a></p>
-        <p><a href="">繁體中文（已選擇）</a></p>
+        <p><a href="https://sunboytpb.github.io/tc/">繁體中文（已選擇）</a></p>
         <p><a href="https://sunboytpb.github.io/en/">English</a></p>
     </body>
 </html>
