--- a/index.html
+++ b/index.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>TPB個人網站</title>
-        <meta charset="utf-8">
-        <style>
-            @import url("css/index.css");
-        </style>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div class="title">
-            <div class="logo">
-
-            </div>
-            <div class="functions">
-                <a class="home" href="index.html">主頁</a>
-                <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">關於</a>
-                <a class="pay" href="pay.html">打賞</a>
-            </div>
-        </div>
-
-        <div class="home">
-            <div class="content">
-                <h2 style="font-size: xx-large;">歡迎來到TPB個人網站！</h2>
-                <p style="font-size: large;">通過此網站，大家能看到我的每一個作品。</p>
-                <p style="font-size: large;">目前本人無法往此網站上傳小説，在小説詳情我會提供小説鏈接</p>
-                <p style="font-size: large;"><button onclick="writings()">查看作品</button></p>
-                <a class="update" href="update.html">查看更新内容</a> <br />
-                <a class="language" href="language.html">更改語言</a>
-            </div>
-        </div>
-        
-        <div class="data">
-            <p class="content">Projected by Github, SunboyTPB 2023-2023</p>
-        </div>
-    </body>
-    <script>
-        function writings() {
-            location.href = "writings.html";
-        }
-    </script>
-</html>
+<p>正在更新……</p>
