--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>关于</title>
+        <title>關於</title>
         <meta charset="utf-8">
         <style>
             @import url("css/about.css");
@@ -14,21 +14,21 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">主页</a>
+                <a class="home" href="index.html">主頁</a>
                 <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">关于</a>
-                <a class="pay" href="pay.html">打赏</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
             </div>
         </div>
         <div class="details">
             <div class="text">
-                <h1>关于我们</h1>
-                <p>这是本作者基于html所编写的网站，感谢在网站编写方面教育我的所有人。</p>
-                <p>目前本作者正在努力改善此网站，网站中将不断加入新的功能。</p>
-                <p>以后本作者将在此网站发布新的小说预告等内容，请大家多多期待！</p>
-                <p>感谢Github官方、HarmonyOS开发者官网等提供网站显示和图标显示等帮助！</p>
-                <p>若您有意和我合作，您可加我QQ：3022930232</p>
-                <button onclick="location.href = 'us.html'">查看我们组员详细信息</button>
+                <h1>關於我們</h1>
+                <p>這是本作者基於html所編寫的網站，感謝在網站編寫方面教育我的所有人。</p>
+                <p>目前本作者正在努力改善此網站，網站中將不斷加入新的功能。</p>
+                <p>以後本作者將在此網站發佈新的小説預告等内容，請大家多多期待！</p>
+                <p>感謝Github官方、HarmonyOS開發者官網等提供網站顯示和圖標等幫助！</p>
+                <p>若您有意和我合作，您可以加我QQ：3022930232</p>
+                <button onclick="location.href = 'us.html'">查看我們組員詳細信息</button>
             </div>
             
         </div>
