--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TPB个人网站</title>
+        <title>TPB個人網站</title>
         <meta charset="utf-8">
         <meta name="msvalidate.01" content="C9A9EE71F3DB72A940736C733BD5F4CE" />
         <style>
@@ -15,21 +15,21 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">主页</a>
+                <a class="home" href="index.html">主頁</a>
                 <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">关于</a>
-                <a class="pay" href="pay.html">打赏</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
             </div>
         </div>
 
         <div class="home">
             <div class="content" id="content">
-                <h2 style="font-size: xx-large;">欢迎来到TPB个人网站！</h2>
-                <p style="font-size: large;">通过此网站，大家能够看到我的每一部作品</p>
-                <p style="font-size: large;">目前本人无法往此网站上传小说，在小说详情我会提供小说链接</p>
+                <h2 style="font-size: xx-large;">歡迎來到TPB個人網站！</h2>
+                <p style="font-size: large;">通過此網站，大家能夠看到我的每一部作品</p>
+                <p style="font-size: large;">目前本人無法往此網站上傳小説，在小説詳情我會提供小説鏈接</p>
                 <p style="font-size: large;"><button onclick="writings()">查看作品</button></p>
                 <a class="update" href="update.html">查看更新内容</a> <br />
-                <a class="language" href="language.html">更改语言</a>
+                <a class="language" href="language.html">更改語言</a>
             </div>
         </div>
         
