--- a/members.html
+++ b/members.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="text">
                     <h4>SunboyTPB</h4>
-                    <p style="font-size: small;">网站管理员、轻小说作家</p>
+                    <p style="font-size: small;">網站管理員、輕小説作家</p>
                 </div>
             </div>
         </div>
