--- a/members/sunboytpb.html
+++ b/members/sunboytpb.html
@@ -13,13 +13,13 @@
         </div>
         <div class="text">
             <h2>SunboyTPB</h2>
-            <h3>网站管理员、轻小说作家等</h3>
+            <h3>網站管理員、輕小説作家等</h3>
             <br />
-            <p>没错，本作者就是SunboyTPB，也是这个网站的管理员。</p>
-            <p>一个每天过得非常开心的少年。</p>
-            <p>将TPB作为网名的原因是，想要快乐地旅游每一个我想旅游的地方。因此T表示Travel或Traveler，B表示Bright或Bright Boy。头像为什么是《原神》中的空，就由大家来猜一猜咯。</p>
-            <p>附加一句：现在整个人员就我一个。┭┮﹏┭┮ 希望大家能够加入我们（“我们”这个词确实不太合适，但没有办法……）</p>
-            <button onclick="location.href = '../members.html'">返回上一级</button>
+            <p>沒錯，本作者就是SunboyTPB，也是這個網站的管理員。</p>
+            <p>一個每天過得非常開心的少年。</p>
+            <p>將TPB作爲網名的原因是，想要快樂地旅游每一個我想旅游的地方。因此T表示Travel或Traveler，B表示Bright或Bright Boy。頭像爲什麽是《原神》中的空，就由大家來猜一猜咯。</p>
+            <p>附加一句：現在整個人員救我一個。┭┮﹏┭┮ 希望大家能夠加入我們（“我們”這個詞確實不太合適，但是也沒有辦法）</p>
+            <button onclick="location.href = '../members.html'">返回上一級</button>
         </div>
     </body>
 </html>
