--- a/update.html
+++ b/update.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <h2>更新内容如下：</h2>
-        <p>优化小说详情的页面。</p>
-        <p>添加人员的详细信息。</p>
-        <p>多语言支持日语。</p>
+        <p>優化小説詳情的頁面。</p>
+        <p>添加人員的詳細信息。</p>
+        <p>多語言支持日語。</p>
         <br />
-        <h2>已知问题如下：</h2>
-        <p>上传到Github之后，EdgeHTML浏览器加载时间长，可能出现无法正常显示。</p>
+        <h2>已知問題如下：</h2>
+        <p>上傳到Github以後，EdgeHTML瀏覽器的加載時間長，可能無法正常顯示。</p>
     </body>
 </html>
