--- a/writings.html
+++ b/writings.html
@@ -16,10 +16,10 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">主页</a>
+                <a class="home" href="index.html">主頁</a>
                 <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">关于</a>
-                <a class="pay" href="pay.html">打赏</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
                 <a id="more" class="more" onclick="show()">更多</a>
                 <a id="none" class="none" onclick="hide()">收回</a>
             </div>
