--- a/writings/东方双世录.html
+++ b/writings/东方双世录.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>作品详情——东方双世录</title>
+        <title>作品詳情——東方雙世錄</title>
         <meta charset="utf-8">
         <style>
             @import url("../css/writings/东方双世录.css");
@@ -46,18 +46,18 @@
             </div>
             <div class="details">
                 <div class="noveltitle">
-                    <h1>东方双世录</h1>
+                    <h1>東方雙世錄</h1>
                 </div>
                 <div class="content">
-                    <p>《东方双世录》是本作者基于东方project改编而来的轻小说。</p>
-                    <p>世界毁灭之际，三个少年少女在「生命的最后一刻」来到了陌生的世界。在这里，他们遇见了新的同伴，也遇见了他们共同的强敌。为了守护这陌生的世界，也为了拯救自己的世界，三个少年少女开始和同伴们互相合作……</p>
+                    <p>《東方雙世錄》是本作者基於東方Project改編而來的輕小説。</p>
+                    <p>世界毀滅之際，三個少年少女在「生命的最後一刻」來到了陌生的世界。在這裏，他們遇見了新的同伴，也遇見了他們共同的强敵。爲了守護這陌生的世界，也爲了拯救自己的世界，三個少年少女開始和同伴們互相合作……</p>
                 </div>
                 <div class="website">
-                    <p>已完结</p>
-                    <p><a href="https://book.sfacg.com/Novel/606519/">SF轻小说</a></p>
-                    <p>目前刺猬猫小说无法在网页端查看，请您下载刺猬猫小说APP搜索查看，谢谢理解。</p>
-                    <p><a href="https://www.bilibili.com/read/cv22536882">哔哩哔哩专栏</a></p>
-                    <p><a href="https://www.jjwxc.net/onebook.php?novelid=8191174&chapterid=1">晋江文学</a></p>
+                    <p>已完結</p>
+                    <p><a href="https://book.sfacg.com/Novel/606519/">SF輕小説</a></p>
+                    <p>目前刺蝟貓小説無法在網頁端查看，請您下載刺蝟貓小説APP搜索查看，謝謝理解</p>
+                    <p><a href="https://www.bilibili.com/read/cv22536882">嗶哩嗶哩專欄</a></p>
+                    <p><a href="https://www.jjwxc.net/onebook.php?novelid=8191174&chapterid=1">晉江文學</a></p>
                 </div>
             </div>
         </div>
