--- a/writings/命运之夜两个世界.html
+++ b/writings/命运之夜两个世界.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>作品详情——Fate；Two World</title>
+        <title>作品詳情——Fate；Two World</title>
         <meta charset="utf-8">
         <style>
             @import url("../css/writings/命运之夜两个世界.css");
@@ -49,14 +49,14 @@
                     <h1>Fate; Two World</h1>
                 </div>
                 <div class="content">
-                    <p>《Fate; Two World》是本作者基于Fate系列作品改编而来的轻小说。</p>
-                    <p>第五次圣杯战争爆发二十年以后的2024年，一个大圣杯却突然出现了。而这个大圣杯也牵扯到另外一个世界。人们把这种规模的圣杯战争，称之为圣杯讨伐战。而现在，两个世界的他们将会做出不同的选择。这两个世界的命运将会走向何处？</p>
+                    <p>《Fate; Two World》是本作者基於Fate系列作品改編而來的輕小説</p>
+                    <p>第五次聖杯戰爭爆發二十年以後的2024年，一個大聖杯卻突然出現了。而這個大聖杯也牽扯到另外一個世界。人們把這種規模的聖杯戰爭，稱之爲聖杯討伐戰。而現在，兩個世界的他們將會做出不同的選擇。這兩個世界的命運將會走向何處？</p>
                 </div>
                 <div class="website">
                     <p>每周日下午12:00更新</p>
-                    <p><a href="https://www.bilibili.com/read/cv24652183?spm_id_from=333.999.0.0">哔哩哔哩专栏</a></p>
-                    <p><a href="https://book.sfacg.com/Novel/650124/">SF轻小说</a></p>
-                    <p><a>刺猬猫小说请移步到APP客户端阅读，网页端未提供相关链接</a></p>
+                    <p><a href="https://www.bilibili.com/read/cv24652183?spm_id_from=333.999.0.0">嗶哩嗶哩專欄</a></p>
+                    <p><a href="https://book.sfacg.com/Novel/650124/">SF輕小説</a></p>
+                    <p><a>刺蝟貓小説請移步到APP客戶端閲讀，網頁端未提供相關鏈接</a></p>
                 </div>
             </div>
         </div>
