--- a/yuanchuang.html
+++ b/yuanchuang.html
@@ -11,7 +11,7 @@
         <div class="hang">
             <div class="bufen" onclick="mofashimen()">
                 <div class="img"><img src="img/魔法师们.jpg" class="mofashimen" style="height: 95%;"/></div>
-                <div class="text">魔法师们</div>
+                <div class="text">魔法師們</div>
             </div>
         </div>
     </body>
