--- a/kind.html
+++ b/kind.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p onclick="parent.frames['writingdetails'].location.href = 'writingdetails.html'">同人小说</p>
+        <p onclick="parent.frames['writingdetails'].location.href = 'writingdetails.html'">同人小説</p>
         <!-- <p onclick="parent.frames['writingdetails'].location.href = 'yuanchuang.html'">原创小说</p> -->
     </body>
     <script>
