--- a/language.html
+++ b/language.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p><a href="https://sunboytpb.github.io/">简体中文（已选择）</a></p>
-        <p><a href="https://sunboytpb.github.io/tc/">繁體中文</a></p>
+        <p><a href="https://sunboytpb.github.io/">简体中文</a></p>
+        <p><a href="https://sunboytpb.github.io/tc/">繁體中文（已選擇）</a></p>
         <p><a href="https://sunboytpb.github.io/en/">English</a></p>
         <p><a href="https://sunboytpb.github.io/jp/">日本語</a></p>
     </body>
