--- a/pay.html
+++ b/pay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>打赏</title>
+        <title>打賞</title>
         <meta charset="utf-8">
         <style>
             @import url("css/pay.css");
@@ -14,29 +14,29 @@
 
             </div>
             <div class="functions">
-                <a class="home" href="index.html">主页</a>
+                <a class="home" href="index.html">主頁</a>
                 <a class="writings" href="writings.html">作品</a>
-                <a class="about" href="about.html">关于</a>
-                <a class="pay" href="pay.html">打赏</a>
+                <a class="about" href="about.html">關於</a>
+                <a class="pay" href="pay.html">打賞</a>
             </div>
         </div>
         <div class="home">
             <div class="qrcode">
                 <div class="receive">
                     <img src="img/收款码.jpg" name="receive" class="receive" />
-                    <p style="font-size: small;">通过扫码赞助</p>
+                    <p style="font-size: small;">通過掃碼贊助</p>
                 </div>
                 <div class="jiangli">
                     <img src="img/领红包.jpg" name="jiangli" class="jiangli" />
-                    <p style="font-size: small;">通过扫码领取红包（我也不知道这玩意到底是啥）</p>
+                    <p style="font-size: small;">通過掃碼領取紅包（我也不知道这玩意到底是啥）</p>
                 </div>
             </div>
             <div class="details">
                 <div class="wenzi">
-                    <h2>感谢您的赞助!</h2>
-                    <p>一直为大家带来更精彩的作品，是本人一直不变的信念。但是与此同时，这也离不开大家的支持。</p>
-                    <p>希望大家能通过打赏多多支持本人。谢谢大家的赞助！</p>
-                    <p>领红包的二维码，我也不知道干什么的。不过我觉得这应该可以让大家领取一些小钱，因此也放了上去。</p>
+                    <h2>感謝您的贊助</h2>
+                    <p>一直為大家帶來更精彩的作品，是本人一直不變的信念。但是與此同時，這也離不開大家的支持。</p>
+                    <p>雖然寒酸，但是也希望大家能通過打賞多多支持本人。謝謝大家的贊助！</p>
+                    <p>領紅包的二維碼，我也不知道幹什麽的。不過我覺得這應該可以讓大家領取一些小錢，因此也放了上去。</p>
                 </div>
                 
             </div>
